// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BiosCard should not render hasReleaseDate 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-6"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        BIOS
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-vendor
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Version
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-version
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`BiosCard should not render hasVendor 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-4"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        BIOS
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Version
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-version
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Release date
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`BiosCard should not render hasVersion 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-5"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        BIOS
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-vendor
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Release date
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`BiosCard should render correctly - no data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-1"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        BIOS
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Version
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Release date
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <div
            class="ins-c-skeleton ins-c-skeleton__sm"
          >
             
          </div>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`BiosCard should render correctly with data - wrong date 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-3"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        BIOS
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-vendor
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Version
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-version
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Release date
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          Not available
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`BiosCard should render correctly with data 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-2"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        BIOS
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-vendor
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Version
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-version
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Release date
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014
        </dd>
      </dl>
    </div>
  </div>
</div>
`;

exports[`BiosCard should render extra 1`] = `
<div
  class="pf-l-stack pf-m-gutter"
>
  <div
    class="pf-l-stack__item"
  >
    <div
      class="pf-c-content"
    >
      <h1
        class=""
        data-ouia-component-id="OUIA-Generated-Text-7"
        data-ouia-component-type="PF4/Text"
        data-ouia-safe="true"
        data-pf-content="true"
      >
        BIOS
      </h1>
    </div>
  </div>
  <div
    class="pf-l-stack__item pf-m-fill"
  >
    <div
      class="pf-c-content"
    >
      <dl
        class=""
        data-pf-content="true"
      >
        <dt
          class=""
          data-pf-content="true"
        >
          Vendor
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-vendor
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Version
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test-version
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          Release date
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          01 Apr 2014
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          something
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          test
        </dd>
        <dt
          class=""
          data-pf-content="true"
        >
          with click
        </dt>
        <dd
          class=""
          data-pf-content="true"
        >
          <a
            href="http://localhost:5000//undefined"
          >
            1 tests
          </a>
        </dd>
      </dl>
    </div>
  </div>
</div>
`;
